--- a/record-builder-processor/pom.xml
+++ b/record-builder-processor/pom.xml
@@ -32,10 +32,24 @@
                 </configuration>
             </plugin>
 
-            <plugin>
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-            </plugin>
+                <configuration>
+                    <artifactSet>
+                        <includes>
+                            <include>com.squareup:javapoet</include>
+                            <include>io.soabase.record-builder:record-builder-processor</include>
+                        </includes>
+                    </artifactSet>
+                    <relocations>
+                        <relocation>
+                            <pattern>com.squareup.javapoet</pattern>
+                            <shadedPattern>io.soabase.com.squareup.javapoet</shadedPattern>
+                        </relocation>
+                    </relocations>
+                </configuration>
+            </plugin-->
         </plugins>
     </build>
 </project>
