--- a/record-builder-test/pom.xml
+++ b/record-builder-test/pom.xml
@@ -16,6 +16,12 @@
             <groupId>io.soabase.record-builder</groupId>
             <artifactId>record-builder-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
