--- a/record-builder-core/pom.xml
+++ b/record-builder-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.soabase.record-builder</groupId>
         <artifactId>record-builder</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.ea-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
