--- a/record-builder-core/pom.xml
+++ b/record-builder-core/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>io.soabase.record-builder</groupId>
         <artifactId>record-builder</artifactId>
-        <version>1.2.ea-SNAPSHOT</version>
+        <version>1.2.ea</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
