you're right - we only need provided/compileOnly. I've made the updates to Maven as well.

--- a/record-builder-test/pom.xml
+++ b/record-builder-test/pom.xml
@@ -13,6 +13,7 @@
         <dependency>
             <groupId>io.soabase.record-builder</groupId>
             <artifactId>record-builder-core</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
