--- a/.github/workflows/maven_java15.yml
+++ b/.github/workflows/maven_java15.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Maven Build - Java 16
+name: Maven Build - Java 15
 
 on:
   push:
@@ -19,6 +19,6 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v1
       with:
-        java-version: 16.0.0-ea
+        java-version: 15
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -P java15 -B package --file pom.xml
