--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
         <url>https://github.com/randgalt/record-builder</url>
         <connection>scm:git:https://github.com/randgalt/record-builder.git</connection>
         <developerConnection>scm:git:git@github.com:randgalt/record-builder.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>record-builder-1.17</tag>
     </scm>
 
     <issueManagement>
