[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>io.soabase.record-builder</groupId>
     <artifactId>record-builder</artifactId>
     <packaging>pom</packaging>
-    <version>1.19</version>
+    <version>1.20-SNAPSHOT</version>
 
     <modules>
         <module>record-builder-core</module>
@@ -73,7 +73,7 @@
         <url>https://github.com/randgalt/record-builder</url>
         <connection>scm:git:https://github.com/randgalt/record-builder.git</connection>
         <developerConnection>scm:git:git@github.com:randgalt/record-builder.git</developerConnection>
-        <tag>record-builder-1.19</tag>
+        <tag>record-builder-1.16</tag>
     </scm>
 
     <issueManagement>
