--- a/record-builder-core/pom.xml
+++ b/record-builder-core/pom.xml
@@ -9,6 +9,10 @@
 
     <artifactId>record-builder-core</artifactId>
 
+    <properties>
+        <license-file-path>${project.parent.basedir}/src/etc/header.txt</license-file-path>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
