chore: added excludes for maven wrapper files on licence header check

--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,8 @@
                             <exclude>**/.travis.yml</exclude>
                             <exclude>**/gradlew</exclude>
                             <exclude>**/.github/**</exclude>
+                            <exclude>**/.mvn/**</exclude>
+                            <exclude>**/mvnw*</exclude>
                         </excludes>
                         <strictCheck>true</strictCheck>
                     </configuration>
