--- a/record-builder-processor/pom.xml
+++ b/record-builder-processor/pom.xml
@@ -32,8 +32,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.squareup</groupId>
-            <artifactId>javapoet</artifactId>
+            <groupId>io.soabase.java-composer</groupId>
+            <artifactId>java-composer</artifactId>
         </dependency>
 
         <dependency>
