--- a/record-builder-test/pom.xml
+++ b/record-builder-test/pom.xml
@@ -28,6 +28,8 @@
 
     <properties>
         <license-file-path>${project.parent.basedir}/src/etc/header.txt</license-file-path>
+
+        <jdk-version>21</jdk-version>
     </properties>
 
     <dependencies>
