Change to Palantir's fork of JavaPoet
I don't have time to maintain Java Composer. I will archive it soon.

h/t Michael Vorburger

--- a/record-builder-processor/pom.xml
+++ b/record-builder-processor/pom.xml
@@ -33,8 +33,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.soabase.java-composer</groupId>
-            <artifactId>java-composer</artifactId>
+            <groupId>com.palantir.javapoet</groupId>
+            <artifactId>javapoet</artifactId>
         </dependency>
 
         <dependency>
