--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 
         <license-file-path>src/etc/header.txt</license-file-path>
 
-        <java-composer-version>1.1</java-composer-version>
+        <java-poet-version>0.7.0</java-poet-version>
         <junit-jupiter-version>5.5.2</junit-jupiter-version>
         <assertj-core.version>3.24.2</assertj-core.version>
         <validation-api-version>2.0.1.Final</validation-api-version>
@@ -112,9 +112,9 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>io.soabase.java-composer</groupId>
-                <artifactId>java-composer</artifactId>
-                <version>${java-composer-version}</version>
+                <groupId>com.palantir.javapoet</groupId>
+                <artifactId>javapoet</artifactId>
+                <version>${java-poet-version}</version>
             </dependency>
 
             <dependency>
